devtools/scraper-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: scraper-service
  namespace: scraper
spec:
  selector:
    app: scraper-app
  ports:
    - name: api
      port: 80
      targetPort: 3000
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: scraper-service-dash
  namespace: scraper
spec:
  selector:
    app: scraper-dashboard
  ports:
    - name: dash
      port: 80
      targetPort: 8080
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scraper-ingress
  namespace: scraper
  labels:
    name: scraper-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /v1
            backend:
              service:
                name: scraper-service
                port:
                  name: api
          - pathType: Prefix
            path: /docs
            backend:
              service:
                name: scraper-service
                port:
                  name: api
          - pathType: Prefix
            path: /queues
            backend:
              service:
                name: scraper-service-dash
                port:
                  name: dash
